<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <POU Name="SetOutputsToFieldBus" Id="{6db120db-ee32-4a79-8d41-09d2c53af944}" SpecialFunc="None">
    <Declaration><![CDATA[// Setup the appropriate output from the outputs  coming from the logic (either PLC or HMI) which are not directly addressable in the linking of variables
FUNCTION_BLOCK FINAL SetOutputsToFieldBus
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//SMC EX260-SEC Valve Bank 1    
(* Terminal 1*)		GVL_IO.SMCEX260_1_Byte0.0 := GVL_IO.LD_YPalletReleaseExtend;
(* Terminal 2*)		GVL_IO.SMCEX260_1_Byte0.1 := GVL_IO.LD_YPalletReleaseRetract;
(* Terminal 3*)		GVL_IO.SMCEX260_1_Byte0.2 := GVL_IO.LD_YPalletCloseExtend;
(* Terminal 4*)		GVL_IO.SMCEX260_1_Byte0.3 := GVL_IO.LD_YPalletCloseRetract;
(* Terminal 5*)		GVL_IO.SMCEX260_1_Byte0.4 := GVL_IO.LD_YPalletHoldDownExtendHome;
(* Terminal 6*)		GVL_IO.SMCEX260_1_Byte0.5 := GVL_IO.LD_YPalletHoldDownRetractEngage;
(* Terminal 7*)		GVL_IO.SMCEX260_1_Byte0.6 := GVL_IO.PI_YEscapementToBowl;
(* Terminal 8*)		GVL_IO.SMCEX260_1_Byte0.7 := GVL_IO.PI_YEscapementToWork;
					
(* Terminal 9*) 	GVL_IO.SMCEX260_1_Byte1.0 := GVL_IO.PI_YPalletHoldDownExtend; 
(* Terminal 10*)	GVL_IO.SMCEX260_1_Byte1.1 := GVL_IO.PI_YPalletHoldDownRetract;
(* Terminal 11*)	GVL_IO.SMCEX260_1_Byte1.2 := 0;
(* Terminal 12*)	GVL_IO.SMCEX260_1_Byte1.3 := 0;
(* Terminal 13*)	GVL_IO.SMCEX260_1_Byte1.4 := 0;
(* Terminal 14*)	GVL_IO.SMCEX260_1_Byte1.5 := 0;
(* Terminal 15*)	GVL_IO.SMCEX260_1_Byte1.6 := 0;
(* Terminal 16*)	GVL_IO.SMCEX260_1_Byte1.7 := 0;
	
(* Terminal 17*) 	GVL_IO.SMCEX260_1_Byte2.0 :=0;
(* Terminal 18*)	GVL_IO.SMCEX260_1_Byte2.1 :=0;
(* Terminal 19*)	GVL_IO.SMCEX260_1_Byte2.2 :=0;
(* Terminal 20*)	GVL_IO.SMCEX260_1_Byte2.3 :=0;
(* Terminal 21*)	GVL_IO.SMCEX260_1_Byte2.4 :=0;
(* Terminal 22*)	GVL_IO.SMCEX260_1_Byte2.5 :=0;
(* Terminal 23*)	GVL_IO.SMCEX260_1_Byte2.6 :=0;
(* Terminal 24*)	GVL_IO.SMCEX260_1_Byte2.7 :=0;
	
(* Terminal x*) 	GVL_IO.SMCEX260_1_Byte3.0 :=0;
(* Terminal x*)		GVL_IO.SMCEX260_1_Byte3.1 :=0;
(* Terminal x*)		GVL_IO.SMCEX260_1_Byte3.2 :=0;
(* Terminal x*)		GVL_IO.SMCEX260_1_Byte3.3 :=0;
(* Terminal x*)		GVL_IO.SMCEX260_1_Byte3.4 :=0;
(* Terminal x*)		GVL_IO.SMCEX260_1_Byte3.5 :=0;
(* Terminal x*)		GVL_IO.SMCEX260_1_Byte3.6 :=0;
(* Terminal x*)		GVL_IO.SMCEX260_1_Byte3.7 :=0;
						
//SMC EX260-SEC Valve Bank 2
(* Terminal 1*)		GVL_IO.SMCEX260_2_Byte0.0 := GVL_IO.BG_YCloseChute1;
(* Terminal 2*)		GVL_IO.SMCEX260_2_Byte0.1 := GVL_IO.BG_YOpenChute1;
(* Terminal 3*)		GVL_IO.SMCEX260_2_Byte0.2 := GVL_IO.BG_YCloseChute2;
(* Terminal 4*)		GVL_IO.SMCEX260_2_Byte0.3 := GVL_IO.BG_YOpenChute2;
(* Terminal 5*)		GVL_IO.SMCEX260_2_Byte0.4 := GVL_IO.CP_YCapSlideExtend;
(* Terminal 6*)		GVL_IO.SMCEX260_2_Byte0.5 := GVL_IO.CP_YCapSlideRetract;
(* Terminal 7*)		GVL_IO.SMCEX260_2_Byte0.6 := GVL_IO.RJ_YRejectPushRetract;
(* Terminal 8*)		GVL_IO.SMCEX260_2_Byte0.7 := GVL_IO.RJ_YRejectPushExtend;


(* Terminal 9*) 	GVL_IO.SMCEX260_2_Byte1.0 := GVL_IO.RJ_YPalletHoldDownExtend_Home;
(* Terminal 10*)	GVL_IO.SMCEX260_2_Byte1.1 := GVL_IO.RJ_YPalletHoldDownRetract_Engage;
(* Terminal 11*)	GVL_IO.SMCEX260_2_Byte1.2 := GVL_IO.UL_1_YPalletHoldDownExtend_Home;
(* Terminal 12*)	GVL_IO.SMCEX260_2_Byte1.3 := GVL_IO.UL_1_YPalletHoldDownRetract_Engage;
(* Terminal 13*)	GVL_IO.SMCEX260_2_Byte1.4 := GVL_IO.UL_2_YPalletHoldDownExtend_Home;
(* Terminal 14*)	GVL_IO.SMCEX260_2_Byte1.5 := GVL_IO.UL_2_YPalletHoldDownRetract_Engage;
(* Terminal 15*)	GVL_IO.SMCEX260_2_Byte1.6 := GVL_IO.UL_3_YPalletHoldDownExtend_Home;   
(* Terminal 16*)	GVL_IO.SMCEX260_2_Byte1.7 := GVL_IO.UL_3_YPalletHoldDownRetract_Engage;


(* Terminal 17*)	GVL_IO.SMCEX260_2_Byte2.0 := GVL_IO.CP_YPalletHoldDownExtend;
(* Terminal 18*)	GVL_IO.SMCEX260_2_Byte2.1 := GVL_IO.CP_YPalletHoldDownRetract;
(* Terminal 19*)	GVL_IO.SMCEX260_2_Byte2.2 := GVL_IO.UL_4_YPalletHoldDownExtend_Home;   
(* Terminal 20*)	GVL_IO.SMCEX260_2_Byte2.3 := GVL_IO.UL_4_YPalletHoldDownRetract_Engage;
(* Terminal 21*)	GVL_IO.SMCEX260_2_Byte2.4 := GVL_IO.BG_YCloseChute3;
(* Terminal 22*)	GVL_IO.SMCEX260_2_Byte2.5 := GVL_IO.BG_YOpenChute3;
(* Terminal 23*)	GVL_IO.SMCEX260_2_Byte2.6 := GVL_IO.BG_YCloseChute4;
(* Terminal 24*)	GVL_IO.SMCEX260_2_Byte2.7 := GVL_IO.BG_YOpenChute4; 

(* Terminal 25*)	GVL_IO.SMCEX260_2_Byte3.0 := GVL_IO.UL_1_YRejectPushRetract;
(* Terminal 26*)	GVL_IO.SMCEX260_2_Byte3.1 := GVL_IO.UL_1_YRejectPushExtend; 
(* Terminal 27*)	GVL_IO.SMCEX260_2_Byte3.2 := GVL_IO.UL_2_YRejectPushRetract;
(* Terminal 28*)	GVL_IO.SMCEX260_2_Byte3.3 := GVL_IO.UL_2_YRejectPushExtend;
(* Terminal 29*)	GVL_IO.SMCEX260_2_Byte3.4 := GVL_IO.UL_3_YRejectPushRetract;
(* Terminal 30*)	GVL_IO.SMCEX260_2_Byte3.5 := GVL_IO.UL_3_YRejectPushExtend;
(* Terminal 31*)	GVL_IO.SMCEX260_2_Byte3.6 := GVL_IO.UL_4_YRejectPushRetract;
(* Terminal 32*)	GVL_IO.SMCEX260_2_Byte3.7 := GVL_IO.UL_4_YRejectPushExtend;

//(* Terminal 3*)		GVL_IO.SMCEX260_2_Byte0.2 := GVL_IO.CP_YEscapeWallCylinderRetract;
//(* Terminal 4*)		GVL_IO.SMCEX260_2_Byte0.3 := GVL_IO.CP_YEscapeWallCylinderExtend;



//(* Terminal 5*)		GVL_IO.SMCEX260_2_Byte0.4 := GVL_IO.CP_YEscapementToPick;
//(* Terminal 6*)		GVL_IO.SMCEX260_2_Byte0.5 := GVL_IO.CP_YEscapementToBowl;




				            					
//(* Terminal 9*) 	GVL_IO.SMCEX260_2_Byte1.0 := GVL_IO.RJ_YPalletReleaseExtend;
//(* Terminal 10*)	GVL_IO.SMCEX260_2_Byte1.1 := GVL_IO.RJ_YPalletReleaseRetract;
//(* Terminal 12*)	GVL_IO.SMCEX260_2_Byte1.2 := GVL_IO.UL_YPalletReleaseRetract;
//(* Terminal 11*)	GVL_IO.SMCEX260_2_Byte1.3 := GVL_IO.UL_YPalletReleaseExtend;

	               									



//(* Terminal 21*)	GVL_IO.SMCEX260_2_Byte2.4 := GVL_IO.CP_YBarellCenterPinRetract;
//(* Terminal 22*)	GVL_IO.SMCEX260_2_Byte2.5 := GVL_IO.CP_YBarellCenterPinExtend;



	
//////////////////// PISTON INSERT STATION SMC LEY ACTUATOR ETHERNET/IP MAPPING OF DATA 


GVL_IO.SMC_LEY_YUINT0.0 := GVL_IO.PI_YMtrStepSelectIN0;
GVL_IO.SMC_LEY_YUINT0.1 := GVL_IO.PI_YMtrStepSelectIN1;
GVL_IO.SMC_LEY_YUINT0.2 := GVL_IO.PI_YMtrStepSelectIN2;
GVL_IO.SMC_LEY_YUINT0.3 := GVL_IO.PI_YMtrStepSelectIN3;
GVL_IO.SMC_LEY_YUINT0.4 := GVL_IO.PI_YMtrStepSelectIN4;
GVL_IO.SMC_LEY_YUINT0.5 := GVL_IO.PI_YMtrStepSelectIN5;

GVL_IO.SMC_LEY_YUINT0.8  := GVL_IO.PI_YMtrHoldMove;
GVL_IO.SMC_LEY_YUINT0.9  := GVL_IO.PI_YMtrSetEnable;
GVL_IO.SMC_LEY_YUINT0.10 := GVL_IO.PI_YMtrDriveStepTrigger;
GVL_IO.SMC_LEY_YUINT0.11 := GVL_IO.PI_YMtrReset;
GVL_IO.SMC_LEY_YUINT0.12 := GVL_IO.PI_YMtrGoHome;
GVL_IO.SMC_LEY_YUINT0.13 := GVL_IO.PI_YMtrJogNeg;
GVL_IO.SMC_LEY_YUINT0.14 := GVL_IO.PI_YMtrJogPos;
GVL_IO.SMC_LEY_YUINT0.15 := GVL_IO.PI_YMtrSwitchJogInch;
(*
GVL_IO.SMC_LEY_YByte0.0 := GVL_IO.PI_YMtrStepSelectIN0;
GVL_IO.SMC_LEY_YByte0.1 := GVL_IO.PI_YMtrStepSelectIN1;
GVL_IO.SMC_LEY_YByte0.2 := GVL_IO.PI_YMtrStepSelectIN2;
GVL_IO.SMC_LEY_YByte0.3 := GVL_IO.PI_YMtrStepSelectIN3;
GVL_IO.SMC_LEY_YByte0.4 := GVL_IO.PI_YMtrStepSelectIN4;
GVL_IO.SMC_LEY_YByte0.5 := GVL_IO.PI_YMtrStepSelectIN5;

GVL_IO.SMC_LEY_YByte1.0 := GVL_IO.PI_YMtrHoldMove;
GVL_IO.SMC_LEY_YByte1.1 := GVL_IO.PI_YMtrSetEnable;
GVL_IO.SMC_LEY_YByte1.2 := GVL_IO.PI_YMtrDriveStepTrigger;
GVL_IO.SMC_LEY_YByte1.3 := GVL_IO.PI_YMtrReset;
GVL_IO.SMC_LEY_YByte1.4 := GVL_IO.PI_YMtrGoHome;
GVL_IO.SMC_LEY_YByte1.5 := GVL_IO.PI_YMtrJogNeg;
GVL_IO.SMC_LEY_YByte1.6 := GVL_IO.PI_YMtrJogPos;
GVL_IO.SMC_LEY_YByte1.7 := GVL_IO.PI_YMtrSwitchJogInch;
*)

////////////////////// Weiss Pick and Place Mapping EtherCAT ////////////////////////////////////

GVL_IO.UL_YPP_Byte4.0 := GVL_IO.UL_YPP_Enable;
GVL_IO.UL_YPP_Byte4.1 := GVL_IO.UL_YPP_BitA;
GVL_IO.UL_YPP_Byte4.2 := GVL_IO.UL_YPP_BitB;
GVL_IO.UL_YPP_Byte4.3 := GVL_IO.UL_YPP_BitC;
GVL_IO.UL_YPP_Byte4.4 := GVL_IO.UL_YPP_ResetAlarm;
GVL_IO.UL_YPP_Byte4.5 := GVL_IO.UL_YPP_StartHoming;
GVL_IO.UL_YPP_Byte4.6 := GVL_IO.UL_YPP_StartSeq;
GVL_IO.UL_YPP_Byte4.7 := GVL_IO.UL_YPP_Stop;

///////////////////////// Vision Controller ////////////////////////////////////////////////////////

GVL_IO.VS_YByte0.0 := GVL_IO.VS_YCmdRequest;
GVL_IO.VS_YByte0.3 := GVL_IO.VS_YResultAck;
GVL_IO.VS_YByte0.4 := GVL_IO.VS_YErrorReset;

GVL_IO.VS_YByte1.0 := GVL_IO.VS_YTrigger1;
GVL_IO.VS_YByte1.1 := GVL_IO.VS_YTrigger2;
GVL_IO.VS_YByte1.2 := GVL_IO.VS_YTrigger3;
GVL_IO.VS_YByte1.3 := GVL_IO.VS_YTrigger4;
GVL_IO.VS_YByte16 :=  GVL_IO.VS_YCmdNumber;
GVL_IO.VS_YByte20 :=  GVL_IO.VS_YCmdParam1;
GVL_IO.VS_YByte24 :=  GVL_IO.VS_YCmdParam2;

GVL_IO.VS_YBarrelLED_off := NOT GVL_IO.VS_YBarrelLED ;]]></ST>
    </Implementation>
    <LineIds Name="SetOutputsToFieldBus">
      <LineId Id="147" Count="0" />
      <LineId Id="78" Count="1" />
      <LineId Id="296" Count="0" />
      <LineId Id="295" Count="0" />
      <LineId Id="362" Count="0" />
      <LineId Id="225" Count="0" />
      <LineId Id="306" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="85" Count="8" />
      <LineId Id="149" Count="0" />
      <LineId Id="95" Count="6" />
      <LineId Id="103" Count="8" />
      <LineId Id="102" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="297" Count="0" />
      <LineId Id="200" Count="0" />
      <LineId Id="300" Count="1" />
      <LineId Id="308" Count="0" />
      <LineId Id="307" Count="0" />
      <LineId Id="393" Count="0" />
      <LineId Id="305" Count="0" />
      <LineId Id="304" Count="0" />
      <LineId Id="327" Count="0" />
      <LineId Id="201" Count="0" />
      <LineId Id="164" Count="0" />
      <LineId Id="329" Count="0" />
      <LineId Id="328" Count="0" />
      <LineId Id="311" Count="0" />
      <LineId Id="310" Count="0" />
      <LineId Id="316" Count="0" />
      <LineId Id="314" Count="0" />
      <LineId Id="331" Count="0" />
      <LineId Id="330" Count="0" />
      <LineId Id="318" Count="0" />
      <LineId Id="317" Count="0" />
      <LineId Id="321" Count="0" />
      <LineId Id="319" Count="0" />
      <LineId Id="323" Count="1" />
      <LineId Id="326" Count="0" />
      <LineId Id="322" Count="0" />
      <LineId Id="390" Count="0" />
      <LineId Id="374" Count="1" />
      <LineId Id="378" Count="0" />
      <LineId Id="391" Count="0" />
      <LineId Id="380" Count="0" />
      <LineId Id="392" Count="0" />
      <LineId Id="371" Count="0" />
      <LineId Id="312" Count="0" />
      <LineId Id="315" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="271" Count="0" />
      <LineId Id="274" Count="0" />
      <LineId Id="272" Count="0" />
      <LineId Id="116" Count="1" />
      <LineId Id="275" Count="1" />
      <LineId Id="279" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="120" Count="2" />
      <LineId Id="211" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="129" Count="1" />
      <LineId Id="161" Count="0" />
      <LineId Id="234" Count="0" />
      <LineId Id="280" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="281" Count="1" />
      <LineId Id="138" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="173" Count="0" />
      <LineId Id="176" Count="0" />
      <LineId Id="332" Count="0" />
      <LineId Id="179" Count="0" />
      <LineId Id="335" Count="5" />
      <LineId Id="352" Count="0" />
      <LineId Id="345" Count="6" />
      <LineId Id="341" Count="1" />
      <LineId Id="180" Count="4" />
      <LineId Id="175" Count="0" />
      <LineId Id="174" Count="0" />
      <LineId Id="185" Count="6" />
      <LineId Id="74" Count="0" />
      <LineId Id="353" Count="0" />
      <LineId Id="212" Count="2" />
      <LineId Id="226" Count="6" />
      <LineId Id="215" Count="1" />
      <LineId Id="243" Count="1" />
      <LineId Id="246" Count="6" />
      <LineId Id="245" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="262" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="403" Count="0" />
      <LineId Id="402" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>